# Lucas

./: .gitignore  Readme.md  cli.py  pyproject.toml
.github/workflows/: ci.yml
Auth/: Dockerfile  api_server.py  requirements.txt  verification.py
Lucas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cloud_runner/: Dockerfile  main.py  requirements.txt
llm/: agent.py  requirements.txt  system_instructions.py
llm/instructions/: complex_instruction.txt  conversation_instruction.txt  exit_instruction.txt  simple_instruction.txt  tester_instruction.txt
lucas-front-main/: App.tsx  Dockerfile  index.html  metadata.json  package-lock.json  package.json  tsconfig.json  types.ts  vite.config.ts
lucas-front-main/components/: AuthPage.tsx  ChatMessage.tsx  ChatMessageSkeleton.tsx  ChatPage.tsx  EmptyChat.tsx  LandingPage.tsx  MarkdownRenderer.tsx  NetworkWarning.tsx  ThinkingStepper.tsx  icons.tsx
lucas-front-main/services/: api.ts  supabase.ts
lucas-front-main/utils/: file.ts
mcps/: Dockerfile  db_conn.py  mcp_api.py  mcp_client.py  mcp_engine.py  requirements.txt  sandbox_orchestrator.py  sandbox_tool.py  session_store.py
tests/: test_cli.py  tests_cli.py
