[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Lucas"
version = "0.1.0"
description = "Lucas AI Trading Backtester App"
authors = [
  { name = "Nwabeke Praisejah", email = "nwabekepraisejah@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
  "pandas",
  "numpy",
  "yfinance",
  "backtesting",
  "quantstats",
  "pyyaml",
  "matplotlib",
  "scikit-learn",
  "rich",
  "pytest"
]

[tool.setuptools.packages.find]
where = ["."]

